# ece571

./: .gitignore  .gitmodules
hw1/: .gitignore
hw1/design/dataflow/: divbyfour.v  iszero.tcl  iszero.v  leapyear.tcl  leapyear.v
hw1/design/procedural/: .gitignore  leapyear.tcl  leapyear.v
hw1/design/structural/: divbyfour.tcl  divbyfour.v  iszero.v  leapyear.tcl  leapyear.v
hw1/verification/: .gitignore  dataflowDivbyfourtb.tcl  dataflowIszerotb.tcl  dataflowLeapyeartb.tcl  divbyfourtb.v  iszerotb.v  leapyeartb.v  proceduralLeapyeartb.tcl  proceeduralLeapyeartb.tcl  structuralDivbyfourtb.tcl  structuralIszero.tcl  structuralIszerotb.tcl  structuralLeapyeartb.tcl
hw2/: .gitignore  fa.sv  fatb.sv  fatb.tcl  mult.sv  multtb.sv  multtb.tcl  rca.sv  rcatb.sv  rcatb.tcl
hw3/: .gitignore  padder.sv  paddertb.sv  paddertb.tcl  rca.sv  serial.sv  serialtb.sv  serialtb.tcl
hw3/sim/: .gitignore  CMakeLists.txt  README.md  main.cpp  serialReciever.cpp  serialReciever.h
hw3/sim/exampleInput/: reset_middle_of_byte.txt  serialInput.txt  twoBytes.txt
hw4/: .gitignore  dd.sv  dd.tcl  ddAlgorithm.sv  ddTest.sv  ddtb.sv  doubleDabblePkg.sv
hw5/: .gitignore  filename.txt  riscvpkg.sv  riscvpkg.tcl  test.s  top.sv
hw6/: .gitignore  simplebusif.sv  simplebusif.tcl
hw7/: .gitignore  padder.sv  paddertb.sv  rca.sv  simplebus.sv  simplebus.tcl  simplebusbug.sv  simplebusbug.tcl
hw8/: .gitignore  README.md  arbiter.sv  arbiter.tcl  assertions.sv  top.sv
